# Foresight.ai

./: .coderabbit.yaml  .env.example  .gitignore  Foresight_ Antigravity Technical Bible  Foresight_ Complete Development Guide.md  Foresight_ Complete Tech Stack Specification.md  Foresight_ Frontend Development Plan.md  Foresight_ Market Research & Competitive Analysis  Foresight_ Zero-Cost Development Guide.md  GSD_CHECKLIST.md  LICENSE  PROGRESS.md  README.md  docker-compose.yml  metrics.json
backend/: Dockerfile  pyproject.toml  requirements.txt  test.db
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  detections.py  monitoring.py  search.py  signals.py  websocket.py
backend/app/cache/: __init__.py  redis_cache.py
backend/app/db/: __init__.py  database.py
backend/app/middleware/: __init__.py  rate_limit.py  security.py
backend/app/models/: __init__.py  database.py
backend/app/monitoring/: jaeger_tracing.py  prometheus_metrics.py
backend/app/services/: __init__.py  advanced_clustering.py  anomaly_detection.py  auth.py  detection.py  embeddings.py  event_streaming.py  forecasting_ensemble.py  grpc_service.proto  (+6 more)
backend/db/: init.sql  supabase_migration.sql
backend/tests/: __init__.py  conftest.py  test_advanced_clustering.py  test_anomaly_detection.py  test_auth.py  test_cache.py  test_detection.py  test_detections.py  test_forecasting_ensemble.py  test_gnn.py  test_health.py  test_monitoring.py  test_nlp_processor.py  test_performance_security.py  test_rate_limit.py  test_ray_performance.py  test_signals.py  test_supabase.py
(+62 files in other folders)
